# Mumble-Robot

./: .gitignore  LICENSE  README.md  docker-compose.yml  launch_mumble.sh  mumble-roadmap.md
mumble_interfaces/: CMakeLists.txt  package.xml  setup.py
mumble_interfaces/mumble_interfaces/: mumble_logging.py
mumble_interfaces/srv/: MotorCommand.srv
mumble_onboard/: CMakeLists.txt  Dockerfile_mumble_onboard  README.md  docker-compose.yml  package.xml  setup.cfg  setup.py
mumble_onboard/bags/straightline/: metadata.yaml  mumble_imu_lidar_bag_0.db3
mumble_onboard/bags/turn_straight/: metadata.yaml  mumble_imu_lidar_bag_0.db3
mumble_onboard/configs/: aquarius_camera_view.json  kneeling_lady_camera_view.json  test_halo.yaml  test_halo_2d_slam.yaml
mumble_onboard/configs/slam3d_configs/: test_direct_3d_ndt_lo.yaml  test_loam_like_lo.yaml  test_slam_3d.yaml
mumble_onboard/halo/: CMakeLists.txt  README.md  imu_calculations.cpp  package.xml
mumble_onboard/halo/common/: sensor_data_definitions.hpp
mumble_onboard/halo/include/halo/: 2d_g2o_icp_methods.hpp  2d_icp_methods.hpp  2d_likelihood_field.hpp  2d_loop_closure_detection.hpp  2d_map_generation.hpp  2d_mapping.hpp  2d_multi_resolution_field.hpp  2d_occupancy_map.hpp  2d_scan_degredation_detection.hpp  2d_submap.hpp  kd_tree.hpp  nanoflann_kdtree.hpp  octo_tree.hpp  point_cloud_processing.hpp
mumble_onboard/halo/include/halo/common/: data_structures.hpp  debug_utils.hpp  eigen_definitions.hpp  g2o_definitions.hpp  halo_io.hpp  math_utils.hpp  pcl_pointcloud_viewer.hpp  point_cloud_processing.hpp  sensor_data_definitions.hpp  sensor_utils.hpp  utm_convert.hpp  yaml_loaded_config.hpp
mumble_onboard/halo/include/halo/gins/: imu_initialization.hpp  imu_integration.hpp
mumble_onboard/halo/include/halo/lo3d/: direct_ndt_3d_lo.hpp  icp_3d_methods.hpp  incremental_ndt.hpp  incremental_ndt_3d.hpp  incremental_ndt_3d_lo.hpp  incremental_ndt_lo.hpp  loam_like_feature_extraction.hpp  loam_like_lo.hpp  ndt_3d.hpp
mumble_onboard/halo/include/halo/slam3d/: backend_optim_3d.hpp  frontend_3d.hpp  iekf_3d.hpp  iekf_lio.hpp  loop_detection_3d.hpp
mumble_onboard/halo/include/nanoflann/: nanoflann.hpp
mumble_onboard/halo/include/sophus/: average.hpp  common.hpp  example_ensure_handler.cpp  formatstring.hpp  geometry.hpp  interpolate.hpp  interpolate_details.hpp  num_diff.hpp  rotation_matrix.hpp  rxso2.hpp  rxso3.hpp  se2.hpp  se3.hpp  sim2.hpp  sim3.hpp  sim_details.hpp  so2.hpp  so3.hpp  test_macros.hpp  types.hpp  velocities.hpp
mumble_onboard/halo/scripts/: visualize_pcd.py
mumble_onboard/halo/src/: export_scan_2_txt.cpp  frontend_3d.cpp  halo.cpp  iekf_3d.cpp  iekf_lio.cpp
mumble_onboard/halo/tests/: test_2d_slam_degredation.cpp  test_2d_slam_icp_methods.cpp  test_2d_slam_likelihood_fields.cpp  test_2d_slam_mapping.cpp  test_2d_slam_occ_map.cpp  test_2d_slam_submaps.cpp  test_2d_slam_visualization.cpp  test_2dslam.cpp  test_3d_icp.cpp  test_3d_loamlike_feature_extraction.cpp  test_datastructures.cpp  test_direct_3d_ndt_lo.cpp  test_gins_imu_eskf.cpp  test_halo_3d_slam.cpp  test_knn.cpp  test_linear_fitting.cpp  test_loamlike_feature_extraction.cpp  test_math.cpp  test_yaml_loaded_config.cpp
mumble_onboard/scripts/: mumble_bag_recorder.py  pcd_sequence_viewer.py  save_bag_scans_to_pcd.py  visualize_pcd.py
mumble_onboard/src/: mumbo_halo_slam.cpp
mumble_physical_runtime/: Dockerfile_mumble_physical_runtime  docker-compose.yml  package.xml  setup.py
mumble_physical_runtime/mumble_physical_runtime/: imu_broadcaster.py  keyboard_teleop_ros2.py  rpi_lidar_a1_mumble.py  serial_interface.py  test_service_caller.py  waveshare_control.py
mumble_physical_runtime/test/: test_loopback_serial.py
mumble_simulation_isaac/: CMakeLists.txt  Dockerfile_mumble_simulation_isaac  docker-compose.yml  package.xml
mumble_simulation_isaac/bags/: README.md  run_ndt_test.sh  scp_bags_from_laptop.sh
mumble_simulation_isaac/bags/hallway_room_loop/: metadata.yaml  my_data_bag_0.db3
mumble_simulation_isaac/bags/imu_init_study_loop/: metadata.yaml  my_data_bag_0.db3
mumble_simulation_isaac/bags/kitchen_1/kitchen_1/: metadata.yaml  my_data_bag_0.db3
mumble_simulation_isaac/bags/loop2/: metadata.yaml  my_data_bag_0.db3
mumble_simulation_isaac/bags/loop_closing_small/: metadata.yaml
mumble_simulation_isaac/bags/no_loop_room/: metadata.yaml  my_data_bag_0.db3
mumble_simulation_isaac/bags/slow_half_hallway/my_data_bag/: metadata.yaml  my_data_bag_0.db3
mumble_simulation_isaac/bags/static_imu_test/my_data_bag/: metadata.yaml  my_data_bag_0.db3
mumble_simulation_isaac/bags/static_imu_test2/: metadata.yaml  my_data_bag_0.db3
mumble_simulation_isaac/bags/straight/: metadata.yaml  mumble_imu_lidar_bag_0.db3
mumble_simulation_isaac/rviz/: mumble_bag_data_viz.rviz
ros2_dream_base_description/: CMakeLists.txt  package.xml  setup.py
ros2_dream_base_description/launch/: ros2_base_sim.launch.py
ros2_dream_base_description/src/: ros2_dream_gazebo_diff_drive_plugin.cpp
ros2_dream_base_description/urdf/: diff_drive.gazebo.xacro  diff_drive.urdf.xacro
src/: docker-compose.yml  launch_mumble.sh
src/base_scripts/: test_loopback_serial.py  test_waveshare_rover.py
src/mumble_physical_runtime/: Dockerfile_mumble_physical_runtime  package.xml  setup.cfg
src/ros2_dream_base_description/: CMakeLists.txt  package.xml  setup.cfg
src/ros2_dream_base_description/config/: view_ros2_base.rviz
src/ros2_dream_base_description/launch/: ros2_base_sim.launch.py
vscode_configs/: launch.json  settings.json  tasks.json
