<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mumble_physical_runtime</name>
  <version>0.0.1</version>
  <description>Onboard Package That Contains Sensor and Motor Driver Code</description>
  <maintainer email="ricoruotongjia@gmail.com">ricojia</maintainer>
  <license>BSD-2</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>mumble_interfaces</depend>
    <build_depend>Mumble_interface</build_depend>
    <exec_depend>Mumble_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
