<?xml version="1.0"?>
<package format="3">
  <name>ros2_dream_base_description</name>
  <version>0.0.1</version>
  <description>The ros2_dream_base_description package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_python</build_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>ament_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

